# fastapi-microservices

./: .gitignore  Makefile  README.md  Tiltfile  pants  pants.toml  renovate.json  requirements.txt  setup.cfg  skaffold.yaml
.github/workflows/: ci.yaml  ci.yml  tests.yml
k8s/: ingress.yaml  postgres.yaml  redis.yaml  users-worker.yaml  users.yaml  worker.yaml
services/users/: Dockerfile  alembic.ini
services/users/migrations/: env.py
services/users/migrations/versions/: dc304df8db88_first_migration.py.py
services/users/scripts/: initial_data.py  prestart.sh
services/worker/: Dockerfile
src/python/users/: BUILD  __main__.py  main.py
src/python/users/api/: __init__.py  deps.py  health.py
src/python/users/core/: config.py  database.py  security.py
src/python/worker/: BUILD  __main__.py  config.py  main.py
users/: Dockerfile  pyproject.toml  requirements.txt  setup.cfg
users/app/: main.py  worker.py
users/app/api/: __init__.py  deps.py  health.py
users/app/api/v1/: __init__.py  home.py  login.py  tasks.py  users.py  utils.py
users/app/core/: config.py  database.py  redis.py  security.py
users/app/crud/: base.py  users.py
users/app/models/: __init__.py  items.py  users.py
users/app/schemas/: token.py  user.py
users/app/utils/: email.py
users/docker/: backend.dockerfile  base.dockerfile  worker.dockerfile
users/migrations/: env.py
users/scripts/: initial_data.py  prestart.sh  wait_database.py
users/tests/: conftest.py  test_home.py  test_login.py  utils.py
users/tests/api/v1/: test_home.py  test_login.py  test_tasks.py
(+15 files in other folders)
